force-app/main/default/objects/Meeting_Recap__c/Meeting_Recap__c.object-meta.xml
<CustomObject>
    <label>Meeting Recap</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Meeting Recap Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Recaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>