force-app/main/default/objects/Meeting_Recap__c/fields/AI_Key_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>AI_Key_Outcomes__c</fullName>
    <description
  >AI-generated key outcomes, decisions, and insights from the meeting</description>
    <label>AI Key Outcomes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>