force-app/main/default/objects/Meeting_Recap__c/fields/AI_Meeting_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Meeting_Summary__c</fullName>
    <description>AI-generated executive summary of the meeting</description>
    <label>AI Meeting Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>