force-app/main/default/objects/Meeting_Recap__c/fields/AI_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>AI_Next_Steps__c</fullName>
    <description
  >AI-generated next steps and action items from the meeting</description>
    <label>AI Next Steps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>