force-app/main/default/objects/Meeting_Recap__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <externalId>true</externalId>
    <label>Event ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>