force-app/main/default/objects/Meeting_Recap__c/fields/Original_Recap_Text__c.field-meta.xml
<CustomField>
    <fullName>Original_Recap_Text__c</fullName>
    <description
  >Stores the original user-entered recap text before AI processing</description>
    <label>Original Recap Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>