force-app/main/default/objects/Meeting_Recap__c/fields/Recap_Completed__c.field-meta.xml
<CustomField>
    <fullName>Recap_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recap Completed</label>
    <type>Checkbox</type>
</CustomField>