force-app/main/default/objects/Meeting_Recap__c/listViews/All_Meeting_Recaps.listView-meta.xml
<ListView>
    <fullName>All_Meeting_Recaps</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Recap_Completed__c</columns>
    <columns>AI_Meeting_Summary__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Meeting Recaps</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>