force-app/main/default/objects/Meeting_Recap__c/listViews/Pending_Meeting_Recaps.listView-meta.xml
<ListView>
    <fullName>Pending_Meeting_Recaps</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Original_Recap_Text__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Recap_Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Pending Meeting Recaps</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>