force-app/main/default/objects/Meeting_Recap__c/listViews/This_Weeks_Meeting_Recaps.listView-meta.xml
<ListView>
    <fullName>This_Weeks_Meeting_Recaps</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Recap_Completed__c</columns>
    <columns>AI_Meeting_Summary__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week's Meeting Recaps</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>